<resources>
    <string name="app_name">Pastebin</string>
    <string name="writeyourcode">Scrivi qui il codice</string>
    <string name="privato">Privato</string>
    <string name="publico">Pubblico</string>
    <string name="nolista">Non in lista</string>
    <string name="expirationprompt">Seleziona…</string>
    <string name="scadenza">Scadenza paste</string>
    <string name="title">Titolo</string>
    <string name="titolopaste">Titolo paste</string>
    <string name="linguaggio">Linguaggio</string>
    <string name="linguaggiprompt">Linguaggi</string>
    <string name="posta">Invia</string>
    <string name="cannotbeblank">La sezione codice non può essere vuota!</string>
    <string name="errore">Errore</string>
    <string name="close">Chiudi</string>
    <string name="result">Risultato</string>
    <string name="open">Apri</string>
    <string name="favourite">Preferita</string>
    <string name="nointernet">Assicurati di essere connesso ad internet e riprova</string>
    <string name="OK">OK</string>
    <string name="createpaste">Crea paste</string>
    <string name="pastepopolari">Paste popolari</string>
    <string name="io">IO</string>
    <string name="sharestarted">Condivisione iniziata. Puoi continuare ad usare l\'applicazione</string>
    <string name="waitdownload">Attendere mentre scarico il paste..</string>
    <string name="fork">Crea copia</string>
    <string name="share">Condividi</string>
    <string name="noauthor">Sconosciuto</string>
    <string name="erroreinterno">L\'errore è dovuto all\'applicazione o a Pastebin</string>
    <string name="blockedip">Il tuo IP è stato bloccato da Pastebin</string>
    <string name="maxunlimitedpastes">E\' stato raggiunto il limite di paste non elencati per il tuo account</string>
    <string name="maxprivatepastes">E\' stato raggiunto il numero massimo di paste privati per il tuo account</string>
    <string name="blankcode">Non hai scritto nessuna riga di codice!</string>
    <string name="maxpastesize">E\' stato raggiunto il peso massimo di un paste</string>
    <string name="norecords">Nessun risultato</string>
    <string name="waitdownloadlist">Attendere mentre scarico la lista…</string>
    <string name="profile">Profilo</string>
    <string name="retry">Riprova</string>
    <string name="nopastes">Nessun paste pubblicato</string>
    <string name="maxpastes">Hai raggiunto il limite di paste in 24h</string>
    <string name="msgerrore">Si è verificato un errore %1$s. Riprova.</string>
    <string name="uploadsuccess">Il paste è stato pubblicato con successo! URL: %1$s</string>
    <string name="IO">Io [%1$s]</string>
    <string name="invaliddata">I dati forniti sono errati!</string>
    <string name="accountnoactive">L\'Account specificato non è attivo!</string>
    <string name="loginok">Login avvenuto con successo!</string>
    <string name="backtohome">Torna alla pagina principale</string>
    <string name="loginpastebin">Per utilizzare questa scheda devi loggarti nel tuo account Pastebin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="continua">Continua</string>
    <string name="logout">Logout</string>
    <string name="useanonimo">Posta come anonimo</string>
    <string name="openbrowser">Apri su Internet</string>
    <string name="preflanguage">Linguaggio default</string>
    <string name="summarypreflanguage">Seleziona il linguaggio che vuoi usare di default per ogni tuo nuovo paste</string>
    <string name="opensettings">Apri impostazioni</string>
    <string name="summaryscadenza">Seleziona la scadenza default da usare per tutti i nuovi paste</string>
    <string name="defaultexpiration">N</string>
    <string name="defaultlanguage">text</string>
    <string name="download">Download</string>
    <string name="downloadfail">Impossibile scaricare il paste..</string>
    <string name="emptypaste">Paste vuoto</string>
    <string name="downloadok">Il paste è stato scaricato</string>
    <string name="confirmdownload">Il paste è già stato scaricato, per confermare il download ripremere su Download</string>
    <string name="localdownlodok">Download del paste %2$s (%1$s) completato con successo! Clicca per aprirlo.</string>
    <string name="deleteconfirm">Sei sicuro di voler cancellare %1$s?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="settings">Impostazioni</string>
    <string name="visiblitapaste">Visibilità paste</string>
    <string name="summaryprefvspaste">Seleziona la visiblità default da utilizzare per la creazione di un paste</string>
    <string name="loading">Loading...</string>
    <string name="language">Linguaggio: %1$s</string>
    <string-array name="expiration">
        <item>Mai</item>
        <item>10 Minuti</item>
        <item>1 Ora</item>
        <item>1 Giorno</item>
        <item>1 Settimana</item>
        <item>2 Settimane</item>
        <item>1 Mese</item>
    </string-array>
    <string-array name="expirationvalues">
        <item>N</item>
        <item>10M</item>
        <item>1H</item>
        <item>1D</item>
        <item>1W</item>
        <item>1M</item>
    </string-array>
    <string-array name="languages">
        <item>4CS</item>
        <item>6502 ACME Cross Assembler</item>
        <item>6502 Kick Assembler</item>
        <item>6502 TASM/64TASS</item>
        <item>ABAP</item>
        <item>ActionScript</item>
        <item>ActionScript 3</item>
        <item>Ada</item>
        <item>ALGOL 68</item>
        <item>Apache Log</item>
        <item>AppleScript</item>
        <item>APT Sources</item>
        <item>ARM</item>
        <item>ASM (NASM)</item>
        <item>ASP</item>
        <item>Asymptote</item>
        <item>autoconf</item>
        <item>Autohotkey</item>
        <item>AutoIt</item>
        <item>Avisynth</item>
        <item>Awk</item>
        <item>BASCOM AVR</item>
        <item>Bash</item>
        <item>Basic4GL</item>
        <item>BibTeX</item>
        <item>Blitz Basic</item>
        <item>BNF</item>
        <item>BOO</item>
        <item>BrainFuck</item>
        <item>C</item>
        <item>C for Macs</item>
        <item>C Intermediate Language</item>
        <item>C#</item>
        <item>C++</item>
        <item>C++ (with QT extensions)</item>
        <item>C: Loadrunner</item>
        <item>CAD DCL</item>
        <item>CAD Lisp</item>
        <item>CFDG</item>
        <item>ChaiScript</item>
        <item>Clojure</item>
        <item>Clone C</item>
        <item>Clone C++</item>
        <item>CMake</item>
        <item>COBOL</item>
        <item>CoffeeScript</item>
        <item>ColdFusion</item>
        <item>CSS</item>
        <item>Cuesheet</item>
        <item>D</item>
        <item>DCL</item>
        <item>DCPU-16</item>
        <item>DCS</item>
        <item>Delphi</item>
        <item>Delphi Prism (Oxygene)</item>
        <item>Diff</item>
        <item>DIV</item>
        <item>DOS</item>
        <item>DOT</item>
        <item>E</item>
        <item>ECMAScript</item>
        <item>Eiffel</item>
        <item>Email</item>
        <item>EPC</item>
        <item>Erlang</item>
        <item>F#</item>
        <item>Falcon</item>
        <item>FO Language</item>
        <item>Formula One</item>
        <item>Fortran</item>
        <item>FreeBasic</item>
        <item>FreeSWITCH</item>
        <item>GAMBAS</item>
        <item>Game Maker</item>
        <item>GDB</item>
        <item>Genero</item>
        <item>Genie</item>
        <item>GetText</item>
        <item>Go</item>
        <item>Groovy</item>
        <item>GwBasic</item>
        <item>Haskell</item>
        <item>Haxe</item>
        <item>HicEst</item>
        <item>HQ9 Plus</item>
        <item>HTML</item>
        <item>HTML 5</item>
        <item>Icon</item>
        <item>IDL</item>
        <item>INI file</item>
        <item>Inno Script</item>
        <item>INTERCAL</item>
        <item>IO</item>
        <item>J</item>
        <item>Java</item>
        <item>Java 5</item>
        <item>JavaScript</item>
        <item>jQuery</item>
        <item>KiXtart</item>
        <item>Latex</item>
        <item>LDIF</item>
        <item>Liberty BASIC</item>
        <item>Linden Scripting</item>
        <item>Lisp</item>
        <item>LLVM</item>
        <item>Loco Basic</item>
        <item>Logtalk</item>
        <item>LOL Code</item>
        <item>Lotus Formulas</item>
        <item>Lotus Script</item>
        <item>LScript</item>
        <item>Lua</item>
        <item>M68000 Assembler</item>
        <item>MagikSF</item>
        <item>Make</item>
        <item>MapBasic</item>
        <item>MatLab</item>
        <item>mIRC</item>
        <item>MIX Assembler</item>
        <item>Modula 2</item>
        <item>Modula 3</item>
        <item>Motorola 68000 HiSoft Dev</item>
        <item>MPASM</item>
        <item>MXML</item>
        <item>MySQL</item>
        <item>Nagios</item>
        <item>newLISP</item>
        <item>None</item>
        <item>NullSoft Installer</item>
        <item>Oberon 2</item>
        <item>Objeck Programming Langua</item>
        <item>Objective C</item>
        <item>OCalm Brief</item>
        <item>OCaml</item>
        <item>Octave</item>
        <item>OpenBSD PACKET FILTER</item>
        <item>OpenGL Shading</item>
        <item>Openoffice BASIC</item>
        <item>Oracle 11</item>
        <item>Oracle 8</item>
        <item>Oz</item>
        <item>ParaSail</item>
        <item>PARI/GP</item>
        <item>Pascal</item>
        <item>PAWN</item>
        <item>PCRE</item>
        <item>Per</item>
        <item>Perl</item>
        <item>Perl 6</item>
        <item>PHP</item>
        <item>PHP Brief</item>
        <item>Pic 16</item>
        <item>Pike</item>
        <item>Pixel Bender</item>
        <item>PL/SQL</item>
        <item>PostgreSQL</item>
        <item>POV-Ray</item>
        <item>Power Shell</item>
        <item>PowerBuilder</item>
        <item>ProFTPd</item>
        <item>Progress</item>
        <item>Prolog</item>
        <item>Properties</item>
        <item>ProvideX</item>
        <item>PureBasic</item>
        <item>PyCon</item>
        <item>Python</item>
        <item>Python for S60</item>
        <item>q/kdb+</item>
        <item>QBasic</item>
        <item>R</item>
        <item>Rails</item>
        <item>REBOL</item>
        <item>REG</item>
        <item>Rexx</item>
        <item>Robots</item>
        <item>RPM Spec</item>
        <item>Ruby</item>
        <item>Ruby Gnuplot</item>
        <item>SAS</item>
        <item>Scala</item>
        <item>Scheme</item>
        <item>Scilab</item>
        <item>SdlBasic</item>
        <item>Smalltalk</item>
        <item>Smarty</item>
        <item>SPARK</item>
        <item>SPARQL</item>
        <item>SQL</item>
        <item>StoneScript</item>
        <item>SystemVerilog</item>
        <item>T-SQL</item>
        <item>TCL</item>
        <item>Tera Term</item>
        <item>thinBasic</item>
        <item>TypoScript</item>
        <item>Unicon</item>
        <item>UnrealScript</item>
        <item>UPC</item>
        <item>Urbi</item>
        <item>Vala</item>
        <item>VB.NET</item>
        <item>Vedit</item>
        <item>VeriLog</item>
        <item>VHDL</item>
        <item>VIM</item>
        <item>Visual Pro Log</item>
        <item>VisualBasic</item>
        <item>VisualFoxPro</item>
        <item>WhiteSpace</item>
        <item>WHOIS</item>
        <item>Winbatch</item>
        <item>XBasic</item>
        <item>XML</item>
        <item>Xorg Config</item>
        <item>XPP</item>
        <item>YAML</item>
        <item>Z80 Assembler</item>
        <item>ZXBasic</item>
    </string-array>
</resources>