<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/forkpaste"
            android:showAsAction="always"
            android:title="@string/fork"
            android:icon="@drawable/ic_action_copy"
            />

    <item
            android:id="@+id/openinbrowser"
            android:showAsAction="never"
            android:title="@string/openbrowser"
            android:icon="@drawable/ic_action_web_site"
            />

    <item
            android:id="@+id/downloadpaste"
            android:showAsAction="never"
            android:title="@string/download"
            android:icon="@drawable/ic_action_download"
            />

    <!--<item-->
    <!--android:id="@+id/sharepaste"-->
    <!--android:showAsAction="ifRoom"-->
    <!--android:title="@string/share"-->
    <!--android:icon="@drawable/ic_action_share"-->
    <!--android:actionProviderClass="android.widget.ShareActionProvider"-->
    <!--/>-->
</menu>