<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_layout"
                android:layout_marginStart="@dimen/margin_left_layout"
                android:layout_marginRight="@dimen/margin_right_layout"
                android:layout_marginEnd="@dimen/margin_right_layout"
                android:layout_marginTop="@dimen/margin_top_layout"
                android:layout_marginBottom="@dimen/margin_bottom_layout">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginpastebin"
            android:id="@+id/title"/>

    <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_below="@id/title"/>

    <EditText android:id="@+id/password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/password"
              android:layout_below="@id/username"
              android:inputType="textPassword"/>

    <CheckBox
        android:layout_below="@id/password"
        android:id="@+id/importSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_settings"/>

    <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@id/importSettings"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="tryLogin"
            android:id="@+id/loginbutton"/>

</RelativeLayout>